Fill in workers section.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -79,7 +79,9 @@
         <h3>Tickets</h3>
         <div class="blurb">
           <!-- TODO: Ticket blurbs. -->
-          Come one, come all! Tickets will be released at 54:45 on 31rd Blobtember.
+          <p>
+            Come one, come all! Tickets will be released at 54:45 on 31rd Blobtember.
+          </p>
           <h4>Pricing</h4>
           <table class="pricing">
             <tr>
@@ -123,25 +125,42 @@
       <div class="center">
         <h3>Workers</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          Homerton’s biggest and best May Ball yet takes place on 16<sup>th</sup> June 2017. In
+          order to make it as spectacular and brilliant as we know it will be, we need your help!
+          If you are interested in working at Homerton May Ball 2017, please check out the roles we
+          have available—applications open later in January, so watch this space!
         </p>
+        <h4>Positions</h4>
+        <table>
+          <tr class="header-row">
+            <td></td>
+            <td>Hours</td>
+            <td>Pay</td>
+          </tr>
+          <tr>
+            <td>Full-time Worker</td>
+            <td>19:00–05:00</td>
+            <td>£70</td>
+          </tr>
+          <tr>
+            <td>Full-time Area Supervisor</td>
+            <td>18:00–05:00</td>
+            <td>£80*</td>
+          </tr>
+          <tr>
+            <td>Half-on Half-off Worker</td>
+            <td>19:00–00:00 or 00:00–05:00</td>
+            <td>Free Entry</td>
+          </tr>
+          <tr>
+            <td>Clear-up Worker</td>
+            <td>05:00 onwards</td>
+            <td>£20*</td>
+          </tr>
+        </table>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          <sub>*area supervisors and clear-up workers will also receive reservations for tickets
+          to next year's event—Homerton's 250<sup>th</sup> anniversary!</sub>
         </p>
       </div>
     </section>
@@ -214,22 +233,22 @@
         <div class="team">
           <!-- Support team. -->
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
             <h5>President</h5>
             <label>Vicki Hodgson</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Vice-President</h5>
             <label>Rachel Sweet</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-treasure@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Treasurer</h5>
             <label>Ben Butt</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-@homerton.cam.ac.uk"><img src="" /></a> <!-- TODO -->
             <h5>HUS Representative</h5>
             <label>Will Hewstone</label>
           </div>
@@ -238,22 +257,22 @@
         <div class="team">
           <!-- Creative team. -->
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Design Officer</h5>
             <label>Ceri Moss</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Design Officer</h5>
             <label>Gabriela Martin</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Publicity and Sponsorship Officer</h5>
             <label>Melissa Diaz</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-publicity@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Theme Coordinator</h5>
             <label>Suroor Rahimtoola</label>
           </div>
@@ -262,22 +281,22 @@
         <div class="team">
           <!-- Consumables team. -->
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ents Officer</h5>
             <label>Nicole Lau</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ents Officer</h5>
             <label>Zoë Carpenter</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Rowenna McGill</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Caitlin Whitby</label>
           </div>
@@ -286,22 +305,22 @@
         <div class="team">
           <!-- Strategy team. -->
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Logistics Officer</h5>
             <label>Dillan Saunders</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Security Officer</h5>
             <label>Chloe Budd</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Personnel Officer</h5>
             <label>Eloïse Sinclair</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Personnel Officer</h5>
             <label>Kaylyn Chan</label>
           </div>
@@ -310,17 +329,17 @@
         <div class="team">
           <!-- Tech team. -->
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
             <h5>IT Officer</h5>
             <label>Ben King</label>
           </div>
           <div class="contact">
-            <img src="" />  <!-- TODO: scale this down to save bandwidth. -->
+            <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Webmaster</h5>
             <label>Sam Hubbard</label>
           </div>
           <div class="contact">
-            <img src="" />
+            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ticketing Officer</h5>
             <label>Eunmi Ha</label>
           </div>
