Correctly scaling committee photos.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -229,121 +229,113 @@
     <footer>
       <div class="center">
         <h3>Committee</h3>
-        <div class="team">
+        <ul class="committee">
           <!-- Support team. -->
-          <div class="contact">
+          <li class="contact">
             <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
             <h5>President</h5>
             <label>Vicki Hodgson</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-president@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Vice-President</h5>
             <label>Rachel Sweet</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-treasure@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Treasurer</h5>
             <label>Ben Butt</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-@homerton.cam.ac.uk"><img src="" /></a> <!-- TODO -->
             <h5>HUS Representative</h5>
             <label>Will Hewstone</label>
-          </div>
-        </div>  <!-- /team -->
+          </li>
 
-        <div class="team">
           <!-- Creative team. -->
-          <div class="contact">
+          <li class="contact">
             <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Design Officer</h5>
             <label>Ceri Moss</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-design@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Design Officer</h5>
             <label>Gabriela Martin</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Publicity and Sponsorship Officer</h5>
             <label>Melissa Diaz</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-publicity@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Theme Coordinator</h5>
             <label>Suroor Rahimtoola</label>
-          </div>
-        </div>  <!-- /team -->
+          </li>
 
-        <div class="team">
           <!-- Consumables team. -->
-          <div class="contact">
+          <li class="contact">
             <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ents Officer</h5>
             <label>Nicole Lau</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-ent@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ents Officer</h5>
             <label>Zoë Carpenter</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Rowenna McGill</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-food-and-drinks@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Food &amp; Drinks Officer</h5>
             <label>Caitlin Whitby</label>
-          </div>
-        </div>  <!-- /team -->
+          </li>
 
-        <div class="team">
           <!-- Strategy team. -->
-          <div class="contact">
+          <li class="contact">
             <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Logistics Officer</h5>
             <label>Dillan Saunders</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-safety@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Security Officer</h5>
             <label>Chloe Budd</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Personnel Officer</h5>
             <label>Eloïse Sinclair</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-staff@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Personnel Officer</h5>
             <label>Kaylyn Chan</label>
-          </div>
-        </div>  <!-- /team -->
+          </li>
 
-        <div class="team">
           <!-- Tech team. -->
-          <div class="contact">
+          <li class="contact">
             <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
             <h5>IT Officer</h5>
             <label>Ben King</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-technical@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Webmaster</h5>
             <label>Sam Hubbard</label>
-          </div>
-          <div class="contact">
+          </li>
+          <li class="contact">
             <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="" /></a>
             <h5>Ticketing Officer</h5>
             <label>Eunmi Ha</label>
-          </div>
-        </div>  <!-- /team -->
-      </div> <!-- /center -->
+          </li>
+        </ul>
+      </div>
     </footer>
   </div>
 
