Add css stars to sky.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -21,6 +21,7 @@
 <body>
   <div class="overflow-wrapper">
     <header>
+      <div class="stars"></div>
       <div class="moon"></div>
       <div class="logo">
         <img class="logomark" src="img/logo.svg" alt="Logo." />
