Create workers page.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Arima+Madurai:500">
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/core.css" />
+  <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
   <div class="overflow-wrapper">
@@ -126,42 +126,13 @@
       <div class="center">
         <h3>Workers</h3>
         <p>
-          Homerton’s biggest and best May Ball yet takes place on 16<sup>th</sup> June 2017. In
-          order to make it as spectacular and brilliant as we know it will be, we need your help!
-          If you are interested in working at Homerton May Ball 2017, please check out the roles we
-          have available—applications open later in January, so watch this space!
-        </p>
-        <h4>Positions</h4>
-        <table>
-          <tr class="header-row">
-            <td></td>
-            <td>Hours</td>
-            <td>Pay</td>
-          </tr>
-          <tr>
-            <td>Full-time Worker</td>
-            <td>19:00–05:00</td>
-            <td>£70</td>
-          </tr>
-          <tr>
-            <td>Full-time Area Supervisor</td>
-            <td>18:00–05:00</td>
-            <td>£80*</td>
-          </tr>
-          <tr>
-            <td>Half-on Half-off Worker</td>
-            <td>19:00–00:00 or 00:00–05:00</td>
-            <td>Free Entry</td>
-          </tr>
-          <tr>
-            <td>Clear-up Worker</td>
-            <td>05:00 onwards</td>
-            <td>£20*</td>
-          </tr>
-        </table>
-        <p>
-          <sub>*area supervisors and clear-up workers will also receive reservations for tickets
-          to next year's event—Homerton's 250<sup>th</sup> anniversary!</sub>
+          Would you like to be part of the biggest and best Homerton May Ball yet? In order to make
+          it as spectacular and brilliant as it will be, we need your help!  If you are interested
+          in working at Homerton May Ball 2017, please check out the roles we have available and
+          find out how to apply <a href="workers.htm">here</a>. If you have any queries,
+          please feel free to contact the Personnel Officers via
+          <a href="mailto:mayball-staff@homerton.cam.ac.uk">email</a>. Also, make sure to visit
+          and like our <a href="https://www.facebook.com/hommayball2017workers">Facebook page</a>.
         </p>
       </div>
     </section>
@@ -227,7 +198,7 @@
       </div>
     </section>
 
-    <footer>
+    <section id="committee">
       <div class="center">
         <h3>Committee</h3>
         <ul class="committee">
@@ -337,6 +308,9 @@
           </li>
         </ul>
       </div>
+    </section>
+    <footer>
+      <!-- TODO: links and stuff. -->
     </footer>
   </div>
 
