Neaten link to workers page.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -129,7 +129,7 @@
           Would you like to be part of the biggest and best Homerton May Ball yet? In order to make
           it as spectacular and brilliant as it will be, we need your help!  If you are interested
           in working at Homerton May Ball 2017, please check out the roles we have available and
-          find out how to apply <a href="workers.htm">here</a>. If you have any queries,
+          find out how to apply <a href="workers">here</a>. If you have any queries,
           please feel free to contact the Personnel Officers via
           <a href="mailto:mayball-staff@homerton.cam.ac.uk">email</a>. Also, make sure to visit
           and like our <a href="https://www.facebook.com/hommayball2017workers">Facebook page</a>.
