Change title and add Homerton skyline to header.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -31,6 +31,7 @@
         </div>
       </div>
       <div class="sign"></div>
+      <div class="skyline"></div>
       <div class="trees"></div>
       <div class="big-top"></div>
       <div class="canopy">
@@ -127,7 +128,7 @@
         <h3>Workers</h3>
         <p>
           Would you like to be part of the biggest and best Homerton May Ball yet? In order to make
-          it as spectacular and brilliant as it will be, we need your help!  If you are interested
+          it as spectacular and brilliant as can be, we need your help!  If you are interested
           in working at Homerton May Ball 2017, please check out the roles we have available and
           find out how to apply <a href="workers">here</a>. If you have any queries,
           please feel free to contact the Personnel Officers via
