Open Facebook link in a new tab.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -133,7 +133,8 @@
           find out how to apply <a href="workers">here</a>. If you have any queries,
           please feel free to contact the Personnel Officers via
           <a href="mailto:mayball-staff@homerton.cam.ac.uk">email</a>. Also, make sure to visit
-          and like our <a href="https://www.facebook.com/hommayball2017workers">Facebook page</a>.
+          and like our <a href="https://www.facebook.com/hommayball2017workers" target="_blank">
+          Facebook page</a>.
         </p>
       </div>
     </section>
