Fill in copyright metadata.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="rgb(152, 45, 8)" />
   <meta name="description" content="Homerton May Ball 2017: A Night at the Circus" />
   <meta name="keywords" content="May ball circus tickets party Homerton college Cambridge 2017" />
-  <!-- TODO: <meta name="copyright" content="" /> -->
+  <meta name="copyright" content="© Copyright 2017 Sam Hubbard" />
 
   <title>Homerton May Ball 2017</title>
 
