Fill in most copy.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -59,11 +59,12 @@
     <section id="about">
       <div class="center">
         <div class="blurb">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          Roll up, roll up to the <strong>House of Fun</strong>! The Homerton May Ball will kick
+          off May Week 2017 in style, with a full night of <strong>dazzling entertainment</strong>.
+          <!--, from 9pm on Friday 16<sup>th</sup> June to 5am on Saturday 17<sup>th</sup> June.-->
+          Magnificent <strong>music</strong>, delicious <strong>food and drink</strong>,
+          and the <strong>unrivalled spectacle of the fair</strong> will transform our
+          beautiful college grounds—prepare for a night like no other. Come one, come all!
         </div>
         <div class="date-time-location">
           <ul>
@@ -79,11 +80,13 @@
     <section id="ticketing">
       <div class="center">
         <h3>Tickets</h3>
-        <div class="blurb">
-          <!-- TODO: Ticket blurbs. -->
-          <p>
-            Come one, come all! Tickets will be released at 54:45 on 31rd Blobtember.
-          </p>
+        <p>
+          Tickets will go on sale at <strong>8pm</strong> on <strong>Saturday 28<sup>th</sup>
+          January</strong> to current students of Homerton College, and at <strong>8pm</strong> on
+          <strong>Saturday 4<sup>th</sup> February</strong> to all University students
+          and Homerton alumni.
+        </p>
+        <div class="blurbs">
           <h4>Pricing</h4>
           <table class="pricing">
             <tr>
@@ -92,8 +95,8 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket-blurb">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua.
+                A Standard ticket provides each guest with full access to all areas of the event,
+                with entry beginning at 9pm.
               </td>
             </tr>
             <tr>
@@ -102,8 +105,8 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket-blurb">
-                Be the first to experience the magic, entering the ball an hour <!-- TODO: check
-                --> before general entrance.
+                A Queue Jump ticket provides each guest with priority queuing, with full access
+                to all areas of the event from 9pm onward.
               </td>
             </tr>
             <tr>
@@ -112,8 +115,9 @@
             </tr>
             <tr>
               <td colspan="2" class="ticket-blurb">
-                Enjoy a resplendant three-course <!-- TODO: check --> dinner in Homerton's Fellows'
-                Dining Room prior to entering the ball.
+                A Dining ticket provides each guest with an exclusive private drinks reception
+                beginning at 6:30pm followed by a sumptuous three-course dining experience,
+                with full access to all areas of the event from 9pm onward.
               </td>
             </tr>
           </table>
@@ -184,19 +188,31 @@
       <div class="center">
         <h3>Charity</h3>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
+          The Homerton May Ball Committee 2017 has chosen to support the following charities:
         </p>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-          ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-          voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-          cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-        </p>
+
+        <div class="charity">
+          <h4>Wintercomfort</h4>
+          <p>
+            <a href="http://wintercomfort.org.uk/" target="_blank">Wintercomfort</a> is a local,
+            Cambridge-based charity that has been supporting homeless men and women for over 25
+            years. The charity offers a safe haven and provides access to basic amenities such as meals, showers and
+            laundry facilities. They also provide a number of opportunities for learning and
+            training, as well as access to health services and legal advice.
+          </p>
+        </div>
+
+        <div class="charity">
+          <h4>Schistosomiasis Control Initiative</h4>
+          <p>
+            <a href="http://www.imperial.ac.uk/schistosomiasis-control-initiative" target="_blank">SCI</a>
+            aims to help those who suffer from, and are at risk of, neglected tropical
+            diseases in Sub-Saharan Africa. The charity assists Ministries of Health across the
+            region to control and eliminate schistosomiasis and other diseases in children and
+            adults, utilising the World Health Organization’s Drug Donation Programme. SCI has been
+            included in the GiveWell list of top charities since December 2014.
+          </p>
+        </div>
       </div>
     </section>
 
