--- a/src/raw/workers.htm
+++ b/src/raw/workers.htm
@@ -31,11 +31,11 @@
     <section id="workers">
       <div class="center">
         <p>
-          Homerton’s biggest and best May Ball yet takes place on 16th June 2017! In order to make
-          it as spectacular and brilliant as we know it will be, we need your help!
+          Homerton’s biggest and best May Ball yet takes place on 16<sup>th</sup> June 2017! In
+          order to make it as spectacular and brilliant as we know it will be, we need your help!
           If you are interested in working at Homerton May Ball 2017, please check out the roles we
-          have available and apply via the link below—applications open on 21st January 2017, so
-          watch this space!
+          have available and apply via the link below—applications open on 21<sup>st</sup> January
+          2017, so watch this space!
         </p>
 
         <h4>Positions</h4>
@@ -122,8 +122,10 @@
           Your role will involve working with Committee members to clear up after the Ball.
           You must be flexible and prepared to perform a variety of tasks as directed by the
           Committee. In addition to your pay you may also receive the opportunity to reserve
-          tickets for next year’s Homerton May Ball 2018 which will be in celebration of our
-          250th Anniversary (so tickets will be popular)!
+          tickets for next year’s Homerton <!-- NOTE: is it a May Ball? --> May Ball 2018
+          which will be in celebration of our
+          250<sup>th</sup> Anniversary (so tickets will be popular)!
+          <!-- NOTE: can we make this promise? -->
         </p>
 
         <br />
