Create FAQ page with CSS accordion.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -177,9 +177,9 @@
       </div>
       <ul class="sponsors">
         <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/CambridgeWineMerchants.png" /></li>
         <li><img src="img/sponsors/TeachFirst.png" /></li>
-        <li><img src="img/sponsors/CambridgeWineMerchants.png" /></li>
+        <li><img src="img/sponsors/TeachFirst.png" /></li>
+        <li><img src="img/sponsors/TeachFirst.png" /></li>
         <li><img src="img/sponsors/TeachFirst.png" /></li>
       </ul>
     </section>
