--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -14,7 +14,7 @@
   <!-- TODO: <link rel="icon" href="favicon.png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" /> -->
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Arima+Madurai:500">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Cherry+Cream+Soda|Corben" />
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/index.css" />
 </head>
