--- a/src/raw/workers.htm
+++ b/src/raw/workers.htm
@@ -7,14 +7,14 @@
   <meta name="theme-color" content="rgb(152, 45, 8)" />
   <meta name="description" content="Homerton May Ball 2017: Workers Applications" />
   <meta name="keywords" content="May ball circus tickets party Homerton college Cambridge 2017 workers applications" />
-  <!-- TODO: <meta name="copyright" content="" /> -->
+  <meta name="copyright" content="© Copyright 2017 Sam Hubbard" />
 
   <title>Workers | Homerton May Ball 2017</title>
 
   <!-- TODO: <link rel="icon" href="favicon.png" />
   <link rel="apple-touch-icon" href="apple-touch-icon.png" /> -->
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Arima+Madurai:500">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Cherry+Cream+Soda|Corben" />
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/workers.css" />
 </head>
