Alter wording of ticketing info.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -61,10 +61,10 @@
         <div class="blurb">
           Roll up, roll up to the <strong>House of Fun</strong>! The Homerton May Ball will kick
           off May Week 2017 in style, with a full night of <strong>dazzling entertainment</strong>.
-          <!--, from 9pm on Friday 16<sup>th</sup> June to 5am on Saturday 17<sup>th</sup> June.-->
           Magnificent <strong>music</strong>, delicious <strong>food and drink</strong>,
           and the <strong>unrivalled spectacle of the fair</strong> will transform our
-          beautiful college grounds—prepare for a night like no other. Come one, come all!
+          beautiful college grounds—prepare for a night like no other. <strong>Come one, come
+          all!</strong>
         </div>
         <div class="date-time-location">
           <ul>
@@ -81,10 +81,16 @@
       <div class="center">
         <h3>Tickets</h3>
         <p>
-          Tickets will go on sale at <strong>8pm</strong> on <strong>Saturday 28<sup>th</sup>
+          Ticket applications will open at <strong>8pm</strong> on <strong>Saturday 28<sup>th</sup>
           January</strong> to current students of Homerton College, and at <strong>8pm</strong> on
           <strong>Saturday 4<sup>th</sup> February</strong> to all University students
-          and Homerton alumni.
+          and Homerton alumni. Successful applicants will have <strong>one week</strong> to make
+          payment before their reserved ticket(s) are released to the waiting list.
+        </p>
+        <p>
+          Each ticket applicant can buy up to three guest tickets in addition to their own.
+          These tickets may be for current students at any college, alumni, or family/friends
+          from outside the University.
         </p>
         <div class="blurbs">
           <h4>Pricing</h4>
