Add sponsorship tagline.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -188,6 +188,13 @@
         <li><img src="img/sponsors/TeachFirst.png" /></li>
         <li><img src="img/sponsors/TeachFirst.png" /></li>
       </ul>
+      <div class="center">
+        <p>
+          Interested in sponsoring Homerton May Ball 2017? Please get in touch with our Publicity
+          and Sponsorship Officer
+          <a href="mailto:mayball-sponsorship@homerton.cam.ac.uk">via email</a>.
+        </p>
+      </div>
     </section>
 
     <section id="charities">
