Add Facebook metadata.

--- a/src/raw/faq.htm
+++ b/src/raw/faq.htm
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="rgb(152, 45, 8)" />
   <meta name="description" content="Homerton May Ball 2017: Frequently Asked Questions" />
-  <meta name="keywords" content="May ball circus tickets party Homerton college Cambridge 2017 faq faqs frequently asked questions" />
-  <meta name="copyright" content="© Copyright 2017 Sam Hubbard" />
+  <meta name="keywords" content="May ball house of fun tickets party Homerton college Cambridge 2017 faq faqs frequently asked questions" />
+  <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
+
+  <!-- Facebook Open Graph metadata -->
+  <meta name="og:title" content="Homerton May Ball 2017" />
+  <meta name="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta name="og:image" content="http://138.68.135.0/img/big_top.svg" />
+  <meta name="og:url" content="http://138.68.135.0/" />
 
   <title>FAQ | Homerton May Ball 2017</title>
 
