--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -5,9 +5,15 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
   <meta name="theme-color" content="rgb(152, 45, 8)" />
-  <meta name="description" content="Homerton May Ball 2017: A Night at the Circus" />
-  <meta name="keywords" content="May ball circus tickets party Homerton college Cambridge 2017" />
+  <meta name="description" content="Homerton May Ball 2017: House of Fun" />
+  <meta name="keywords" content="May ball house of fun tickets party Homerton college Cambridge 2017" />
   <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
+
+  <!-- Facebook Open Graph metadata -->
+  <meta name="og:title" content="Homerton May Ball 2017" />
+  <meta name="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta name="og:image" content="http://138.68.135.0/img/big_top.svg" />
+  <meta name="og:url" content="http://138.68.135.0/" />
 
   <title>Homerton May Ball 2017</title>
 
@@ -68,7 +74,7 @@
         </div>
         <div class="date-time-location">
           <ul>
-            <li>Friday June 16<sup>th</sup></li>
+            <li>Friday 16<sup>th</sup> June</li>
             <li>9:00pm–5:00am</li>
             <li>Homerton College</li>
           </ul>
