Create Facebook cover image.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -12,7 +12,7 @@
   <!-- Facebook Open Graph metadata -->
   <meta name="og:title" content="Homerton May Ball 2017" />
   <meta name="og:description" content="Roll up, roll up to the House of Fun" />
-  <meta name="og:image" content="http://138.68.135.0/img/big_top.svg" />
+  <meta name="og:image" content="http://138.68.135.0/img/fb.png" />
   <meta name="og:url" content="http://138.68.135.0/" />
 
   <title>Homerton May Ball 2017</title>
