Update Open Graph information.

--- a/src/raw/faq.htm
+++ b/src/raw/faq.htm
@@ -10,10 +10,10 @@
   <meta name="copyright" content="Copyright © 2017 Homerton May Ball Committee" />
 
   <!-- Facebook Open Graph metadata -->
-  <meta name="og:title" content="Homerton May Ball 2017" />
-  <meta name="og:description" content="Roll up, roll up to the House of Fun" />
-  <meta name="og:image" content="http://138.68.135.0/img/fb.png" />
-  <meta name="og:url" content="http://138.68.135.0/" />
+  <meta property="og:title" content="Homerton May Ball 2017" />
+  <meta property="og:description" content="Roll up, roll up to the House of Fun" />
+  <meta property="og:image" content="http://homertonmayball.co.uk/img/fb.png" />
+  <meta property="og:url" content="http://homertonmayball.co.uk/" />
 
   <title>FAQ | Homerton May Ball 2017</title>
 
