Update Suroor's position title.

--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -278,8 +278,8 @@
             <label>Melissa Diaz</label>
           </li>
           <li class="contact">
-            <a href="mailto:mayball-publicity@homerton.cam.ac.uk"><img src="" /></a>
-            <h5>Theme Coordinator</h5>
+            <a href="mailto:mayball-ticketing@homerton.cam.ac.uk"><img src="" /></a>
+            <h5>Ticketing Officer and Theme Coordinator</h5>
             <label>Suroor Rahimtoola</label>
           </li>
 
