--- a/src/raw/index.htm
+++ b/src/raw/index.htm
@@ -16,9 +16,7 @@
   <meta property="og:url" content="http://homertonmayball.co.uk/" />
 
   <title>Homerton May Ball 2017</title>
-
-  <!-- TODO: <link rel="icon" href="favicon.png" />
-  <link rel="apple-touch-icon" href="apple-touch-icon.png" /> -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel|Cherry+Cream+Soda|Corben" />
   <link rel="stylesheet" href="css/normalize.css" />
